--- a/projects/css/styles.css
+++ b/projects/css/styles.css
@@ -23,29 +23,42 @@ ol.project-list-container {
     height: 100%;
 }
 
-.project-image {
-    border-radius: 0.5rem;
-    -webkit-border-radius: 0.5rem;
-    -moz-border-radius: 0.5rem;
-    -ms-border-radius: 0.5rem;
-    -o-border-radius: 0.5rem;
+.project > .lead-text {
+    background-color: transparent !important;
+    text-transform: capitalize;
+    word-spacing: initial !important;
+}
+
+.project-list-container .project-image {
+    -webkit-border-radius: 0.5rem !important;
+    -moz-border-radius: 0.5rem !important;
+    -ms-border-radius: 0.5rem !important;
+    -o-border-radius: 0.5rem !important;
+    border-radius: 0.5rem !important;
+
     overflow: hidden;
 }
 
 .project img {
+    /* border-radius: 0.5rem !important; */
     transition: transform 0.3s cubic-bezier(0.5, 0, 0.75, 1);
-    /* object-fit: cover; */
-    width: max-content;
+    /*object-fit: cover;
+    */width: max-content;
     width: 100%;
-    /* height: 300px;
+    /*height: 300px;
     width: 100%;
     max-width: 100% ;
-    max-height: 500px; */
-    height: auto;
+    max-height: 500px;
+    */height: auto;
     -webkit-transition: transform 0.3s cubic-bezier(0.5, 0, 0.75, 1);
     -moz-transition: transform 0.3s cubic-bezier(0.5, 0, 0.75, 1);
     -ms-transition: transform 0.3s cubic-bezier(0.5, 0, 0.75, 1);
     -o-transition: transform 0.3s cubic-bezier(0.5, 0, 0.75, 1);
+    margin: var(--space-1) 0;
+    -webkit-border-radius: 0.5rem !important;
+    -moz-border-radius: 0.5rem !important;
+    -ms-border-radius: 0.5rem !important;
+    -o-border-radius: 0.5rem !important;
 }
 
 .project-image img:hover {
@@ -61,10 +74,4 @@ ol.project-list-container {
     ol.project-list-container {
         grid-template-columns: repeat(1, 1fr);
     }
-
-    /* .project-image img {
-        object-fit: cover;
-        width: inherit;
-        height: 40vh;
-    } */
 }
