--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 
     --font-family-primary: 'Montserrat', sans-serif;
     --font-family-secondary: 'Source Sans Pro', sans-serif;
+    --font-family-ternary: 'Ubuntu', sans-serif;
 
     --space-1: 1rem;
     --space-0-5: 0.5rem;
@@ -179,7 +180,7 @@ body.dark-theme .btn-secondary {
 }
 
 .btn:hover {
-    opacity: 0.9;
+    opacity: 0.85;
     transform: translateY(-5px);
     -webkit-transform: translateY(-5px);
     -moz-transform: translateY(-5px);
@@ -216,7 +217,9 @@ body.dark-theme .btn-secondary {
 
 .article-head {
     margin: var(--space-1-5) 0;
-    font-size: 1.75rem;
+    font-size: 1rem;
+    font-weight: 300;
+    text-transform: uppercase;
 }
 
 .section-head {
@@ -995,7 +998,7 @@ body.dark-theme .footer {
     }
 
     .article-head {
-        font-size: 1.25rem;
+        font-size: 1.1rem;
     }
 
     .showcase-buttons {
