styles: lead text, challenges li ul

--- a/projects/css/styles.css
+++ b/projects/css/styles.css
@@ -23,10 +23,11 @@ ol.project-list-container {
     height: 100%;
 }
 
-.project > .lead-text {
+ol.project-list-container .lead-text {
     background-color: transparent !important;
     text-transform: capitalize;
-    word-spacing: initial !important;
+    color: inherit !important;
+    margin-bottom: var(--space-0-25);
 }
 
 .project-image {
@@ -37,6 +38,10 @@ ol.project-list-container {
     border-radius: 0.5rem !important;
 
     overflow: hidden;
+
+    box-shadow: 0.25em 0.7em 0.75em rgba(0,0,0,0.25),
+    0.125em 0.125em 0.25em rgba(0,0,0,0.15);
+
 }
 
 .project-image img {
@@ -56,14 +61,6 @@ ol.project-list-container {
     -moz-border-radius: 0.5rem !important;
     -ms-border-radius: 0.5rem !important;
     -o-border-radius: 0.5rem !important;
-
-    margin: var(--space-1) 0;
-
-    /*height: 300px;
-    width: 100%;
-    max-width: 100% ;
-    max-height: 500px;
-    */
 }
 
 .project-image img:hover {
@@ -74,13 +71,17 @@ ol.project-list-container {
     -o-transform: scale(1.05);
 }
 
+/* END OF PROJECT/ INDEX.HTML */
+
+/* START OF INDIVIDUAL PROJECT'S PAGE */
+
 .project-description {
     margin:  0 0 var(--space-1);
 }
 
 .project-description-container {
     margin: var(--space-2) auto;
-    padding: var(--space-1) var(--space-2);
+    padding: var(--space-1) var(--space-0-75);
 }
 
 .project-details {
@@ -138,14 +139,7 @@ body.light-theme  .article-head {
     margin: var(--space-3) 0 var(--space-0-5);
     background: transparent !important;
     padding: 0 ;
-}
-
-body.dark-theme .lead-text {
-    color: var(--dark-theme-primary-color) !important;
-}
-
-body.light-theme .lead-text {
-    color: var(--light-theme-primary-color) !important;
+    color: inherit;
 }
 
 .project-challenges .lead-text {
@@ -155,23 +149,15 @@ body.light-theme .lead-text {
     word-wrap: break-word;
 }
 
-body.light-theme .project-challenges .lead-text  {
-    color: var(--light-theme-background-color) !important;
-}
-
-
-body.dark-theme .project-challenges .lead-text  {
-    color: var(--dark-theme-background-color) !important;
-}
-
 .project-challenges ul {
-    list-style: outside square;
-    margin-left: 1rem;
+    margin-left: var(--space-2);
+    margin-top: var(--space-1);
 }
 
 .project-challenges li {
-    margin: 0.75rem 0;
-    padding-left: 0.75rem;
+    margin: var(--space-0-25) 0;
+    padding-left: var(--space-0-5);
+    list-style-type: square;
 }
 
 .project-challenges li::marker {
