styles: edit theme toggle

--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,15 @@ body.dark-theme nav.navbar  h1:hover {
     color: var(--dark-theme-background-color)
 }
 
+body.light-theme nav.navbar h1.theme-toggle i{
+    font-size: 1.4rem;
+}
+
+
+body.light-theme nav.navbar h1.theme-toggle {
+    cursor: pointer !important;
+}
+
 body.dark-theme nav.navbar h1.theme-toggle:hover {
     box-shadow: 0px 0px 0.5rem var(--light-theme-background-color);
 }
@@ -985,10 +994,10 @@ body.dark-theme .footer {
         background: transparent;
         border: 0;
         cursor: pointer;
-        left: calc(50% - var(--space-1-5));
+        left: calc(48% - var(--space-1-5));
         z-index: 200;
         position: absolute;
-        left: calc(50% - var(--space-1-5));
+        left: calc(48% - var(--space-1-5));
     }
 
     .nav-open ul.navlinks {
